tests/integration/fail/ranges_len_wrong_type.kr
# Test: len() requires a range, list, or string
# Expected: Fail with "Function 'len' requires a list, string, or range argument"

call len with 42

